# fp-test-cases

./: .gitignore  Cargo.toml  LICENSE.md  README.md  foundry.toml  justfile  network_params.yaml
crates/fp-test-fixtures/: Cargo.toml
crates/fp-test-fixtures/src/: lib.rs
devnet/: minimal.yaml  standard.yaml
script/: Deployer.s.sol  ERC20Transfer.s.sol  Precompiler.s.sol  Reader.s.sol  Transfer.s.sol  Writer.s.sol
src/: Deployer.sol  ERC20Transfer.sol  Precompiler.sol  Reader.sol  Transfer.sol  Writer.sol
